--- a/booking.html
+++ b/booking.html
@@ -12,31 +12,30 @@
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">  
 </head>
 
-<header>
-  <div class="nav-left">
-    <ul class="nav-auth">
-      <li><a href="login.html">Log In</a></li>
-      <li><a href="signup.html">Sign Up</a></li>
-    </ul>
-    <a href="index.html" class="logo">Bubble Lab Laundry</a>
-  </div>
-
-  <nav>
-    <ul class="nav-right">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="booking.html">Booking</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="feedback.html">Feedback</a></li>
-      <li><a href="faqs.html">FAQs</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-</header>
-
-
 <body>
-  
+
+  <header>
+    <div class="nav-left">
+      <ul class="nav-auth">
+        <li><a href="login.html">Log In</a></li>
+        <li><a href="signup.html">Sign Up</a></li>
+      </ul>
+      <a href="index.html" class="logo">Bubble Lab Laundry</a>
+    </div>
+
+    <nav>
+      <ul class="nav-right">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="booking.html">Booking</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="feedback.html">Feedback</a></li>
+        <li><a href="faqs.html">FAQs</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
   <section class="hero">
     <div class="hero-content">
       <h2>Your clothes, our care</h2>
@@ -63,18 +62,18 @@
     <p class="sub-heading">Need our services? Just fill the form below:</p>
     <img src="images/arrow.gif" alt="arrow down" style="width: 60px; display: block; margin: 0 auto 20px;" />
 
-   <form id="bookingForm">
-     <label>Name:</label>
-     <input type="text" name="name" required>
+    <form id="bookingForm">
+      <label>Name:</label>
+      <input type="text" name="name" required>
 
-     <label>Contact Number:</label>
-     <input type="tel" name="contact" required>
+      <label>Contact Number:</label>
+      <input type="tel" name="contact" required>
 
-     <label>Address:</label>
-     <textarea name="address" required></textarea>
-      
-     <label>Select Services:</label>
-     <div class="service-checkbox-group">
+      <label>Address:</label>
+      <textarea name="address" required></textarea>
+        
+      <label>Select Services:</label>
+      <div class="service-checkbox-group">
         <label><input type="checkbox" value="Express Laundry"> Express Laundry</label>
         <label><input type="checkbox" value="Wash Only"> Wash Only</label>
         <label><input type="checkbox" value="Stain Removal"> Stain Removal</label>
@@ -84,25 +83,31 @@
         <label><input type="checkbox" value="Curtain Cleaning"> Curtain Cleaning</label>
         <label><input type="checkbox" value="Wash & Fold"> Wash & Fold</label>
         <label><input type="checkbox" value="Dry Cleaning"> Dry Cleaning</label>
-     </div>
+      </div>
 
-     <p id="totalPrice" style="margin-top: 10px; font-weight: bold;">Total: RM0.00</p>
+      <p id="totalPrice" style="margin-top: 10px; font-weight: bold;">Total: RM0.00</p>
 
       <label>Date:</label>
-      <input type="date" required>
+      <input type="date" name="date" required>
 
       <label>Time:</label>
-      <input type="time" required>
+      <input type="time" name="time" required>
 
       <button type="submit">Submit Order</button>
     </form>
   </div>
 
   <footer>
-    <p>&copy; <sup>2025 </sup>  |  Bubble Lab Laundry.  All rights reserved.</p>
+    <p>&copy; <sup>2025 </sup>  |  Bubble Lab Laundry. All rights reserved.</p>
     <p>Contact us : <sub>+6012-345 6789</sub></p>
   </footer>
 
+  <!-- Include SweetAlert2 & Confetti -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+
+  <!-- Your Booking Script -->
   <script src="booking.js"></script>
+
 </body>
 </html>
